delete cardInfo when card deleted

--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -271,7 +271,7 @@ body {
   width: 7rem;
 }
 
-/*PROC INLEGE SECTION*/
+/*PROC EDOOKIO SECTION*/
 .reason {
   border: 1px solid #eeeeee;
   border-radius: 10px;
