--- a/views/index.ejs
+++ b/views/index.ejs
@@ -231,7 +231,7 @@
                             <div class="card border-grey">
                                 <div class="card-body">
                                     <div class="d-flex justify-content-evenly align-items-center">
-                                        <h5 class="text-center mb-0">Generálním partnerem projektu InLege je Advokátní kancelář Novák</h5>
+                                        <h5 class="text-center mb-0">Generálním partnerem projektu Edookio je Advokátní kancelář Novák</h5>
                                         <div class="d-flex justify-content-evenly align-items-center">
                                             <img src="/img/icon_highfive.png" class="img-fit-100" style="max-height: 80px;" alt="advokatnovak">
                                         </div>
@@ -246,7 +246,10 @@
         </div>
       </div>
 
-      <section class="proc-inlege" style="background-color: rgb(254, 240, 255)">
+      <section
+        class="proc-edookio"
+        style="background-color: rgb(254, 240, 255)"
+      >
         <div class="container">
           <div class="row pb-3">
             <div class="col-md-10 offset-md-1">
@@ -375,7 +378,7 @@
         </div>
       </section>
 
-      <section class="proc-inlege">
+      <section class="proc-edookio">
         <div class="container">
           <div class="row pb-3">
             <h1 class="mb-2 mt-5 text-center">Studuj efektivně</h1>
@@ -454,7 +457,7 @@
                 </p>
                 <div class="d-flex justify-content-start">
                   <a
-                    href="https://apps.apple.com/us/app/inlege/id6740498818"
+                    href="https://apps.apple.com/us/app/edookio/id6740498818"
                     target="_blank"
                     class="btn btn-lg btn-danger"
                     ><i class="fab fa-apple"></i> iOS</a
@@ -473,7 +476,10 @@
         </div>
       </section>
 
-      <section class="proc-inlege" style="background-color: rgb(254, 240, 255)">
+      <section
+        class="proc-edookio"
+        style="background-color: rgb(254, 240, 255)"
+      >
         <div class="container">
           <div class="row">
             <div class="col-md-10 offset-md-1 my-5">
