--- a/views/legal/vop.ejs
+++ b/views/legal/vop.ejs
@@ -39,8 +39,8 @@
           vzniklé v souvislosti nebo na základě Smlouvy o poskytování
           vzdělávacího obsahu (dále jen „Smlouva“), uzavírané mezi
           poskytovatelem a uživatelem prostřednictvím internetových stránek
-          umístněných na internetové adrese www.inlege.cz (dále jen „internetový
-          portál“).
+          umístněných na internetové adrese www.edookio.com (dále jen
+          „internetový portál“).
         </p>
       </div>
     </div>
@@ -461,9 +461,9 @@
       <div class="col-11">
         <p>
           Uživatel je oprávněn uplatnit vady služeb u poskytovatele
-          prostřednictvím e-mailové adresy info@inlege.cz, a to bez zbytečného
-          odkladu poté, co vadu zjistil. V reklamaci je uživatel povinen přesně
-          specifikovat, v čem vada spočívá nebo jak se projevuje.
+          prostřednictvím e-mailové adresy edookio@edookio.cz, a to bez
+          zbytečného odkladu poté, co vadu zjistil. V reklamaci je uživatel
+          povinen přesně specifikovat, v čem vada spočívá nebo jak se projevuje.
         </p>
       </div>
     </div>
@@ -742,7 +742,7 @@
       <div class="col-11">
         <p>
           Uživatel doručuje poskytovateli korespondenci na e-mailovou adresu
-          info@inlege.cz. Poskytovatel doručuje uživateli korespondenci na
+          edookio@edookio.cz. Poskytovatel doručuje uživateli korespondenci na
           e-mailovou adresu uvedenou v jeho uživatelském účtu.
         </p>
       </div>
