--- a/views/category.ejs
+++ b/views/category.ejs
@@ -81,7 +81,7 @@
         </p>
         <div class="d-flex justify-content-evenly align-items-center">
           <a
-            href="https://apps.apple.com/us/app/inlege/id6740498818"
+            href="https://apps.apple.com/us/app/edookio/id6740498818"
             target="_blank"
             class="btn btn-outline-danger mx-2 text-small"
             ><i class="fab fa-apple"></i>
@@ -862,19 +862,19 @@ category.sections.forEach(section => { %>
             data-bs-dismiss="modal"
           ></button>
         </div>
-        <h3 class="text-center mt-3">Mobilní aplikace InLege je tady!</h3>
+        <h3 class="text-center mt-3">Mobilní aplikace Edookio je tady!</h3>
         <p class="text-center">
-          Stáhni si aplikaci InLege a uč se kdekoli a kdykoli!
+          Stáhni si aplikaci Edookio a uč se kdekoli a kdykoli!
         </p>
         <div class="d-flex justify-content-center mt-4">
           <a
-            href="https://apps.apple.com/us/app/inlege/id6670204630"
+            href="https://apps.apple.com/us/app/edookio/id6740498818"
             target="_blank"
             class="btn btn-danger mx-2"
             >App Store</a
           >
           <a
-            href="https://play.google.com/store/apps/details?id=cz.inlege.InLege&hl=en"
+            href="https://play.google.com/store/apps/details?id=com.edookio.edookio"
             target="_blank"
             class="btn btn-danger mx-2"
             >Google Play</a
@@ -883,7 +883,7 @@ category.sections.forEach(section => { %>
         <div>
           <img
             src="/img/inlege_app_mock.png"
-            alt="InLege App"
+            alt="Edookio App"
             class="img-fluid"
           />
         </div>
