--- a/views/legal/feedback.ejs
+++ b/views/legal/feedback.ejs
@@ -1,42 +1,71 @@
 <% layout ('layouts/boilerplate.ejs') %>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 offset-lg-2">
-                <div class="card p-3">
-                    <div class="row p-3 pb-0">
-                        <div class="col-12">
-                            <h3>Stojíme o tvou zpětnou vazbu</h3>
-                            <p class="my-4">InLege je projekt, na kterém stále pracujeme. Budeme rádi za tvé připomínky a nápady na
-                                zlepšení. Využij prosím formulář níže nebo nám napiš na e-mail <a
-                                    href="mailto: info@inlege.cz">info@inlege.cz</a>.</p>
-                        </div>
-                    </div>
-                    <div class="row p-3 pt-0">
-                        <div class="col-lg-8">
-                            <form action="/legal/feedback" method="POST">
-                                <div class="form-group mb-3">
-                                    <input type="text" class="form-control mt-2" id="name" name="name" 
-                                    placeholder="Jméno" 
-                                    required>
-                                </div>
-                                <div class="form-group">
-                                    <input type="email" class="form-control mt-2" id="email" name="email" value="<%= user.email %>" placeholder="E-mail" required>
-                                </div>
-                                <div class="form-group">
-                                    <textarea class="form-control mt-2" id="text" name="text" rows="10" placeholder="Tvé nápady a připomínky..." required></textarea>
-                                </div>
-                                <div>
-                                    <input type="text" name="school" style="display:none;" tabindex="-1" autocomplete="off">
-                                </div>
-                                <button type="submit" class="btn btn-danger mt-3">Odeslat feedback</button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-8 offset-lg-2">
+      <div class="card p-3">
+        <div class="row p-3 pb-0">
+          <div class="col-12">
+            <h3>Stojíme o tvou zpětnou vazbu</h3>
+            <p class="my-4">
+              Edookio je projekt, na kterém stále pracujeme. Budeme rádi za tvé
+              připomínky a nápady na zlepšení. Využij prosím formulář níže nebo
+              nám napiš na e-mail
+              <a href="mailto: edookio@edookio.cz">edookio@edookio.cz</a>.
+            </p>
+          </div>
         </div>
+        <div class="row p-3 pt-0">
+          <div class="col-lg-8">
+            <form action="/legal/feedback" method="POST">
+              <div class="form-group mb-3">
+                <input
+                  type="text"
+                  class="form-control mt-2"
+                  id="name"
+                  name="name"
+                  placeholder="Jméno"
+                  required
+                />
+              </div>
+              <div class="form-group">
+                <input
+                  type="email"
+                  class="form-control mt-2"
+                  id="email"
+                  name="email"
+                  value="<%= user.email %>"
+                  placeholder="E-mail"
+                  required
+                />
+              </div>
+              <div class="form-group">
+                <textarea
+                  class="form-control mt-2"
+                  id="text"
+                  name="text"
+                  rows="10"
+                  placeholder="Tvé nápady a připomínky..."
+                  required
+                ></textarea>
+              </div>
+              <div>
+                <input
+                  type="text"
+                  name="school"
+                  style="display: none"
+                  tabindex="-1"
+                  autocomplete="off"
+                />
+              </div>
+              <button type="submit" class="btn btn-danger mt-3">
+                Odeslat feedback
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
+</div>
 
-
-
-    <script src="/js/jquery.min.js"></script>
+<script src="/js/jquery.min.js"></script>
