--- a/views/partials/cookiesBar.ejs
+++ b/views/partials/cookiesBar.ejs
@@ -1,9 +1,11 @@
 <% if(cookiesAgreed !== true && !currentUser){ %>
-    <div class="cookies-warning" id="cookies-warning">
-        <div class="d-flex justify-content-between align-items-center">
-            <p class="px-md-2">Aplikace InLege potřebuje pro správné fungování cookies.</p>
-            <a href="#" class="btn-agree my-2" id="btn-agree">Povolit vše</a>
-            <a class="my-3" href="/legal/cookies">Nastavení cookies</a>
-        </div>
-    </div>
+<div class="cookies-warning" id="cookies-warning">
+  <div class="d-flex justify-content-between align-items-center">
+    <p class="px-md-2">
+      Aplikace Edookio potřebuje pro správné fungování cookies.
+    </p>
+    <a href="#" class="btn-agree my-2" id="btn-agree">Povolit vše</a>
+    <a class="my-3" href="/legal/cookies">Nastavení cookies</a>
+  </div>
+</div>
 <% } %>
