--- a/views/questions/show.ejs
+++ b/views/questions/show.ejs
@@ -79,10 +79,10 @@
             <div class="card d-flex flex-row justify-content-center align-items-center border-grey mt-3">
               <div class="card-body">
                 <div class="d-flex justify-content-evenly align-items-center">
-                  <p class="text-center mb-0 px-1">Mobilní aplikace <span class="color-primary">InLege</span> je tady!</p>
+                  <p class="text-center mb-0 px-1">Mobilní aplikace <span class="color-primary">Edookio</span> je tady!</p>
                   <div class="d-flex justify-content-center align-items-center">
-                  <a href="https://apps.apple.com/us/app/inlege/id6670204630" target="_blank" class="btn btn-outline-danger text-small"><i class="fab fa-apple"></i></a>
-                  <a href="https://play.google.com/store/apps/details?id=cz.inlege.InLege" target="_blank" class="btn btn-outline-danger mx-1 text-small"><i class="fab fa-android"></i></a>
+                  <a href="https://apps.apple.com/us/app/edookio/id6740498818" target="_blank" class="btn btn-outline-danger text-small"><i class="fab fa-apple"></i></a>
+                  <a href="https://play.google.com/store/apps/details?id=com.edookio.edookio" target="_blank" class="btn btn-outline-danger mx-1 text-small"><i class="fab fa-android"></i></a>
                   </div>
                 </div>
               </div>
